<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- Cipher Morse Section -->
    <LinearLayout
        android:id="@+id/layout_cipher_morse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3F2FD"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_title_Cipher_morse"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#1976D2"
            android:gravity="center"
            android:text="@string/cipher_morse"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_title_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingBottom="8dp"
            android:text="@string/input_area_of_morse_code_encryption"
            android:textSize="18sp"
            android:textColor="#212121" />

        <EditText
            android:id="@+id/edit_text_for_input_for_encryption"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:gravity="center|start"
            android:hint="@string/type_your_message_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="14sp"
            android:paddingBottom="10dp"
            android:paddingTop="6dp"
            android:textColor="@color/black"
            android:background="#FFFFFF" />
    </LinearLayout>

    <!-- Customize Symbols Section -->
    <LinearLayout
        android:id="@+id/layout_customize_symbols"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layout_cipher_morse"
        app:layout_constraintBottom_toTopOf="@id/layout_Encryption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_title_customize_symbols"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#1976D2"
            android:gravity="center"
            android:text="@string/customize_symbols"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="10sp"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/tv_dash_symbol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#E3F2FD"
                android:gravity="center"
                android:text="@string/dash_symbol"
                android:textSize="18sp"
                android:textColor="#212121" />

            <EditText
                android:id="@+id/input_for_dash_symbol_encryption"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/type_something"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="7sp"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                android:textSize="14sp"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dot_symbol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#E3F2FD"
                android:gravity="center"
                android:text="@string/dot_symbol"
                android:textSize="18sp"
                android:textColor="#212121"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/input_for_dot_symbol_encryption"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/type_something"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="7sp"
                android:textColor="#212121"
                android:textColorHint="#757575"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_save_symbols"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5sp"
                android:layout_weight="1"
                android:backgroundTint="#03A9F4"
                android:text="@string/save_symbols"
                android:textColor="#FFFFFF"
                tools:ignore="NestedWeights,TextContrastCheck" />

            <Button
                android:id="@+id/btn_set_defaults_symbols"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5sp"
                android:layout_weight="1"
                android:backgroundTint="#03A9F4"
                android:text="@string/set_defaults"
                android:textColor="#FFFFFF"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_encrypt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5sp"
                android:layout_weight="1"
                android:backgroundTint="#0288D1"
                android:text="@string/encrypt"
                android:textColor="#FFFFFF"
                tools:ignore="NestedWeights,TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>

    <!-- Encryption Output Section -->
    <LinearLayout
        android:id="@+id/layout_Encryption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3F2FD"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_title_Encryption"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#1976D2"
            android:gravity="center"
            android:text="@string/encryption"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_height="0sp">

            <TextView
                android:id="@+id/tv_subtitle_output_area"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="3.2"
                android:gravity="center|start"
                android:text="@string/output_area_of_morse_code_encryption"
                android:textSize="16sp"
                android:textColor="#212121"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btn_save_to_clipboard"
                android:layout_width="0sp"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:backgroundTint="#0288D1"
                android:text="@string/copy"
                android:textColor="#FFFFFF"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_output_results_of_encryption"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:paddingTop="5dp"
            android:text="@string/results_will_be_shown_here"
            android:textAlignment="textStart"
            android:textColor="#616161"
            android:textSize="14sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btn_go_to_decryption"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="#03A9F4"
            android:text="@string/go_to_decryption_menu"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
